2014-03-26  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20140326-1.c: New test.

2014-03-25  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60315
	* testsuite/g++.dg/torture/pr60315.C: New testcase.

2014-03-25  Martin Jambor  <mjambor@suse.cz>

	PR ipa/60600
	* g++.dg/ipa/pr60600.C: New test.

2014-03-25  John David Anglin  <danglin@gcc.gnu.org>

	PR testsuite/58013
	* g++.dg/opt/pr56999.C: Pop hidden visibility.

2014-03-25  Richard Biener  <rguenther@suse.de>

	PR middle-end/60635
	* gfortran.dg/lto/pr60635_0.f90: New testcase.
	* gfortran.dg/lto/pr60635_1.c: Likewise.

2014-03-24  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/60627
	* g++.dg/cpp1y/pr60627.C: New testcase.

2014-03-24  Alex Velenko  <Alex.Velenko@arm.com>

	* gcc.target/aarch64/ushr64_1.c: New.

2014-03-24  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/vect-abs.c (dg-options): Add -std=c99.
	(LONG_LONG): Use LLONG.
	(set_rvector_long): Explicitly return void.
	(set_vector_long): Likewise.
	(check_vector_long): Likewise.

2014-03-24  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/ubsan/div-by-zero-4.c: Don't include limits.h.  Define
	INT_MIN.
	* c-c++-common/ubsan/overflow-1.c: Check for unwanted output.
	* c-c++-common/ubsan/overflow-add-1.c: Likewise.
	* c-c++-common/ubsan/overflow-mul-1.c: Likewise.
	* c-c++-common/ubsan/overflow-mul-3.c: Likewise.
	* c-c++-common/ubsan/overflow-negate-2.c: Likewise.
	* c-c++-common/ubsan/overflow-sub-1.c: Likewise.
	* c-c++-common/ubsan/pr59503.c: Likewise.
	* c-c++-common/ubsan/pr60613-1.c: Likewise.
	* c-c++-common/ubsan/save-expr-1.c: Likewise.
	* c-c++-common/ubsan/shift-3.c: Likewise.
	* c-c++-common/ubsan/shift-6.c: Likewise.
	* c-c++-common/ubsan/undefined-1.c: Likewise.
	* c-c++-common/ubsan/vla-2.c: Likewise.
	* c-c++-common/ubsan/vla-3.c: Likewise.
	* c-c++-common/ubsan/vla-4.c: Likewise.
	* g++.dg/ubsan/cxx11-shift-1.C: Likewise.
	* g++.dg/ubsan/return-2.C: Likewise.
